security: add API key protection and security setup guide
- Update .gitignore to exclude mcp-config-local.json and sensitive files
- Add SECURITY_SETUP.md with comprehensive security guidelines
- Local API keys stored in .env.local and mcp-config-local.json (git-ignored)
- Template files remain in repo for team collaboration

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ build/
 .env.local
 .env.*.local
 
+# Local API keys and sensitive configs
+mcp-config-local.json
+**/secrets/
+*.key
+*.pem
+
 # IDE
 .vscode/
 .idea/
