--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,26 @@
 # Dependencies
 node_modules/
-.pnpm-store/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Environment variables
+.env
+.env.local
+.env.*.local
 
 # Build outputs
 dist/
 build/
 *.tsbuildinfo
 
-# Environment
-.env
-.env.local
-.env.*.local
+# Logs
+logs/
+*.log
 
-# Local API keys and sensitive configs
-mcp-config-local.json
-**/secrets/
-*.key
-*.pem
+# OS files
+.DS_Store
+Thumbs.db
 
 # IDE
 .vscode/
@@ -25,20 +29,22 @@ mcp-config-local.json
 *.swo
 *~
 
-# OS
-.DS_Store
-Thumbs.db
+# Backup files
+*.backup
+*.bak
 
-# Logs
-logs/
-*.log
-npm-debug.log*
-pnpm-debug.log*
-
-# Testing
+# Test coverage
 coverage/
 .nyc_output/
 
-# Temporary
+# Temporary files
 tmp/
 temp/
+
+# Reference and example (local only)
+reference/
+example/
+
+# Race output
+race_output/
+race_demo_output/
