feat: add global process skills, symlink installer, and core engineering principles
- Add 4 process skills (TDD, systematic-debugging, verify-before-claim, critical-review)
  adapted from superpowers, with frontmatter for Claude Code skill system
- Add global/CLAUDE.md with 5 non-negotiable engineering principles
- Add install.sh for one-time symlink setup to ~/.claude/
- Add frontmatter to existing tool skills (race-optimize, call-model)
- Update tool skill paths to absolute ($HOME/git/...) for cross-project use
- Update CLAUDE.md to development guide with install instructions
- lib/ai.js: add checkModels(), timeout support, env parsing fix
- lib/race.js: add preflight model check, fix adversarial regex, reuse AI config
- Add convergence and health check tests
- Bump to v6.1.0 with exports and bin entries

--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "infrastructure-skills",
-  "version": "6.0.0",
+  "version": "6.1.0",
   "description": "AI skill library - race optimization, model calling, and more",
   "type": "module",
-  "private": true,
+  "exports": {
+    ".": "./lib/ai.js",
+    "./race": "./lib/race.js"
+  },
+  "bin": {
+    "ai-call": "./lib/ai.js",
+    "ai-race": "./lib/race.js"
+  },
   "scripts": {
     "call": "node lib/ai.js call",
     "list": "node lib/ai.js list",
